--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/Lidemy/mentor-program-5th#readme",
   "devDependencies": {
-    "eslint": "^7.23.0",
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
     "@lidemy/eslint-config-lidemy": "^1.0.0",
+    "eslint": "^7.23.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "husky": "^6.0.0",
