--- a/homeworks/week18/hw1/package.json
+++ b/homeworks/week18/hw1/package.json
@@ -12,10 +12,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
+    "imgur": "^1.0.2",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
