--- a/homeworks/week18/hw1/package.json
+++ b/homeworks/week18/hw1/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
